<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    tools:context="com.example.jdachuk.face2facechatapp.LogInActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_string"
        android:textSize="46sp"
        android:textAppearance="@style/MainTextStyle"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/log_in_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#90FFFFFF"
        android:textColor="#FFFFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_start_inputs"
        android:drawableStart="@drawable/ic_mail_outline_white_24dp"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/log_in_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="#90FFFFFF"
        android:textColor="#FFFFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_start_inputs"
        android:drawableStart="@drawable/ic_lock_outline_white_24dp"
        app:layout_constraintTop_toBottomOf="@id/log_in_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:textAllCaps="false"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_start_button"
        app:layout_constraintTop_toBottomOf="@id/log_in_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/log_in_reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/need_new_account_string"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:background="#00000000"
        android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
