<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jdachuk.face2facechatapp.ChatActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/default_photo"
                android:layout_marginStart="55dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="parent"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="@id/user_photo"
                app:layout_constraintStart_toEndOf="@id/user_photo"/>

            <TextView
                android:id="@+id/user_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_placeholder"
                android:textSize="9sp"
                android:textColor="#90FFFFFF"
                android:paddingStart="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/user_photo"
                app:layout_constraintStart_toEndOf="@id/user_photo"
                tools:ignore="RtlSymmetry,SmallSp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/chat_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title=" "
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messages_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chat_actions"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chat_actions"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#50000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/message_hint"
            android:textColorHint="#a5ffffff"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/send_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_send_24dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/message_text"
            android:contentDescription="@string/send_desc" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
